# Cod-Drumming-Classification

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: main.ipynb
results/perch_v2_MLP_n20_per_class/: results.md
results/perch_v2_MLP_n500_per_class/: results.md
results/perch_v2_logistic_n20_per_class/: results.md
results/perch_v2_logistic_n500_per_class/: results.md
src/data/: config.py  loader.py  preprocess.py
src/model/: perch.py
src/training/: evaluate.py  train.py
src/visualize/: metrics.py  run.py  spectrograms.py  tsne.py  waveforms.py
